@@ -1,5 +1,6 @@
 2011-03-25 6.6.8-8 Cristy  <quetzlzacatenango@image...>
   * Add InterpolatePixelPacket() method.
+  * Add support for the %[opaque] property.
 
 2011-03-25  6.6.8-8 Cristy  <quetzlzacatenango@image...>
   * New version 6.6.8-8.
